--- a/facebok/templates/updatepro.html
+++ b/facebok/templates/updatepro.html
@@ -10,6 +10,10 @@
         <p><input type="text" placeholder="Username" name="username"></p>
         <p><input type="number" placeholder="Phone Number" name="phone"></p>
         <p><input type="date" placeholder="Date Of Birth" name="date_birth"></p>
+        <p class="custom-file">
+            <input type="file" class="custom-file-input" name="profile_pic">
+            <label class="custom-file-label" for="profile_pic">Profile Picture</label>
+        </p>
         <p><input type="submit" value="Update Profile"></p>
         </form>
     </div>
