--- a/facebok/static/css/profile.css
+++ b/facebok/static/css/profile.css
@@ -1,10 +1,22 @@
 .profile {
-    background-color:#034f84;
+    background-color:#494e52;
     float: right;
     text-align: left;
     padding: 5%;
     border: 5pt;
     border-radius: 5%;
     
+}
+
+
+.post-body {
+    left: 60%;
+    background-color: #878f99;
+    border: navajowhite;
+    border-radius: 10%;
+    margin-right: 50%;
+    margin-left: 10%;
+    text-align: center;
+    width: 600px;
 }
 
